--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 <!-- Create an increment button with the id of 'increment-btn' -->
 <button id="increment-btn" onclick="increment()"> INCREMENT </button>
 <button id="save-btn" onclick="save()"> Save</button>
+<p id="save-el">Previous Entries: </p>
 </div>
 
 <!-- <p id="welcome-el"></p> -->
